--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,9 @@
 Change Log
 ==========
-### 0.0.3 2020-07-05 Documentation Update
+### 0.0.4 2020-07-10 Minor bug fix
+- Fixed interval calculation error when q < 3.
+
+### 0.0.3 2020-07-06 Documentation Update
 - Added new section about SuperMemo-2 in documentation, and fixed some formats in README.
 
 ### 0.0.2 2020-07-05 Refactored feature
